v0.2.1 (2021-09-12)
- providers(soccerstreamlinks_soccer): added league name to labels
- sources: add liveonscore.to

v0.2.0 (2021-09-11)
- providers: add soccerstreamlinks.com (soccer)

v0.1.6 (2021-08-21)
- sources: fix ovostreams.com
- sources: add bdnewszh.com
- sources: add daddylive.me

v0.1.5 (2021-08-20)
- sources: add sportnews.to

v0.1.4 (2021-08-14)
- sources: add techoreels.com
- sources: add nflgamezone.com

v0.1.3 (2021-08-14)
- bump version to 0.1.3

v0.1.2 (2021-08-07)
- providers(streams100): update event URL

v0.1.1 (2021-04-04)
- sources: add mazystreams.xyz
- sources: add alexsports.live
- sources: add streamsports.pro
- sources: add allsportsmedia.live
- sources: add streamspass.com
- sources: fix hockeynews.site

v0.1.0 (2021-04-03)
- switch to python3 to make it work on Kodi 19 Matrix

v0.0.8 (2020-12-27)
- providers(streams100): update root URL

v0.0.7 (2020-10-04)
- sources: add buffstream1.com
- sources: add hockeynews.site
- sources: add hhdstreams.club
- sources: add mazymedias.com
- sources: add fightpass.site
- sources: add liveonscore.tv
- sources(streamcr7-net): add m3u8 search alternative

v0.0.6 (2020-10-04)
- providers(streams100): update event url

v0.0.5 (2020-08-15)
- providers: rename soccerstreams100.tv to streams100.net
- providers: update root/event URLs for soccerstreams100.tv

v0.0.3 (2020-02-18)
- providers: add acestream table support for soccerstreams100.tv
- sources: fix myoplay.live
- sources: fix ovostreams.com

v0.0.2 (2020-02-08)
- bs4: swap html5lib to html.parser
- imp: remove jsbeautifier
- sources: add streamfoot.tk
- sources: add reddit-streams.blogspot.com

v0.0.1 (2020-01-31)
- (initial)